rustdocs/errors/rust-bitcoin-internals-src-const_tools.rs.txt
error[E0255]: the name `copy_byte_array_from_slice` is defined multiple times
  --> ../rust-bitcoin/internals/src/const_tools.rs:24:9
   |
 8 | macro_rules! copy_byte_array_from_slice {
   | --------------------------------------- previous definition of the macro `copy_byte_array_from_slice` here
...
24 | pub use copy_byte_array_from_slice;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ `copy_byte_array_from_slice` reimported here
   |
   = note: `copy_byte_array_from_slice` must be defined only once in the macro namespace of this module

error[E0255]: the name `concat_bytes_to_arr` is defined multiple times
  --> ../rust-bitcoin/internals/src/const_tools.rs:54:9
   |
32 | macro_rules! concat_bytes_to_arr {
   | -------------------------------- previous definition of the macro `concat_bytes_to_arr` here
...
54 | pub use concat_bytes_to_arr;
   |         ^^^^^^^^^^^^^^^^^^^ `concat_bytes_to_arr` reimported here
   |
   = note: `concat_bytes_to_arr` must be defined only once in the macro namespace of this module

error[E0255]: the name `cond_const` is defined multiple times
  --> ../rust-bitcoin/internals/src/const_tools.rs:90:9
   |
58 | macro_rules! cond_const {
   | ----------------------- previous definition of the macro `cond_const` here
...
90 | pub use cond_const;
   |         ^^^^^^^^^^ `cond_const` reimported here
   |
   = note: `cond_const` must be defined only once in the macro namespace of this module

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0255`.
